GUI framebuffer upscales 4x, then downscales to native resolution
changed linux install commands in CMakeLists.txt
chdir in linux (fixes a lot of headaches running from gnome-builder...)
Added new and improved font files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -488,13 +488,13 @@ set(BASE_DATA_DIR "./" CACHE INTERNAL "Base data dir")
 if (NOT APPLE AND UNIX)
   include(GNUInstallDirs)
   if (DATA_DIR)
-	set(BASE_DATA_DIR "${CMAKE_INSTALL_FULL_DATAROOTDIR}/barony")
+	set(BASE_DATA_DIR "${CMAKE_INSTALL_PREFIX}")
   endif()
   message(STATUS "Base data directory ${BASE_DATA_DIR}")
 
   if (GAME_ENABLED)
 	install(TARGETS barony
-	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+	RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}"
 	COMPONENT Runtime
 	)
   endif(GAME_ENABLED)
@@ -593,19 +593,31 @@ endif(EDITOR_ENABLED)
 if (NOT APPLE AND UNIX)
   if (EDITOR_ENABLED)
 	install(TARGETS ${EDITOR_EXE_NAME}
-	  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+	  RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT Runtime
 	)
   endif()
 
-  install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lang DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/barony)
+  install(DIRECTORY
+	${CMAKE_SOURCE_DIR}/books
+	${CMAKE_SOURCE_DIR}/config
+	${CMAKE_SOURCE_DIR}/data
+	${CMAKE_SOURCE_DIR}/fonts
+	${CMAKE_SOURCE_DIR}/images
+	${CMAKE_SOURCE_DIR}/items
+	${CMAKE_SOURCE_DIR}/lang
+	${CMAKE_SOURCE_DIR}/maps
+	${CMAKE_SOURCE_DIR}/models
+	${CMAKE_SOURCE_DIR}/music
+	${CMAKE_SOURCE_DIR}/sound
+	DESTINATION "${CMAKE_INSTALL_PREFIX}"
+  )
 
-  if (EXISTS books)
-	install(DIRECTORY 
-		${CMAKE_CURRENT_BINARY_DIR}/books ${CMAKE_CURRENT_BINARY_DIR}/images ${CMAKE_CURRENT_BINARY_DIR}/items
-		${CMAKE_CURRENT_BINARY_DIR}/maps ${CMAKE_CURRENT_BINARY_DIR}/models ${CMAKE_CURRENT_BINARY_DIR}/music
-		${CMAKE_CURRENT_BINARY_DIR}/sound DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/barony
-	)
-  endif()
+  install(FILES
+  	${CMAKE_SOURCE_DIR}/gamecontrollerdb.txt
+  	${CMAKE_SOURCE_DIR}/playernames-female.txt
+  	${CMAKE_SOURCE_DIR}/playernames-male.txt
+  	DESTINATION "${CMAKE_INSTALL_PREFIX}"
+  )
 endif()
 # 2) Windows install targets
 if (WIN32)
