+ Set up a CI for Windows builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,36 @@ endif()
 
 if (NOT "${BARONY_WIN32_LIBRARIES}" STREQUAL "")
 	list(APPEND CMAKE_PREFIX_PATH $ENV{BARONY_WIN32_LIBRARIES})
+
+	# If not specified, set library search paths to look here.
+	if ("${SDL2DIR}" STREQUAL "")
+		set (SDL2DIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING SDL2 DIRECTORY! SET to: ${SDL2DIR}")
+	endif()
+	if ("${PHYSFSDIR}" STREQUAL "")
+		set (PHYSFSDIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING PHYSFSDIR DIRECTORY! SET to: ${PHYSFSDIR}")
+	endif()
+	if ("${RAPID_JSONROOT}" STREQUAL "" AND "${RAPID_JSON_ROOT}" STREQUAL "" AND "${RAPID_JSON_DIR}" STREQUAL "")
+		set (RAPID_JSON_DIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING RAPID_JSON_DIR DIRECTORY! SET to: ${RAPID_JSON_DIR}")
+	endif()
+	if ("${FMOD_DIR}" STREQUAL "")
+		set (FMOD_DIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING FMOD_DIR DIRECTORY! SET to: ${FMOD_DIR}")
+	endif()
+	if ("${ZLIB_DIR}" STREQUAL "")
+		set (ZLIB_DIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING ZLIB_DIR DIRECTORY! SET to: ${ZLIB_DIR}")
+	endif()
+	if ("${PNG_DIR}" STREQUAL "")
+		set (PNG_DIR "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING PNG_DIR DIRECTORY! SET to: ${PNG_DIR}")
+	endif()
+	if ("${STEAMWORKS_ROOT}" STREQUAL "")
+		set (STEAMWORKS_ROOT "${BARONY_WIN32_LIBRARIES}")
+		message("SETTING STEAMWORKS_ROOT DIRECTORY! SET to: ${STEAMWORKS_ROOT}")
+	endif()
 endif(NOT "${BARONY_WIN32_LIBRARIES}" STREQUAL "")
 
 if (DEFINED ENV{BARONY_DATADIR}) # Used by visual studio to set the current working directory when debugging the barony executables.
