--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -127,6 +127,7 @@ list(APPEND EDITOR_SOURCES
 	#"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/eos_editor.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/prng.cpp"
 )
 
 add_subdirectory(magic)
