--- a/VS.2015/Barony/Barony.vcxproj
+++ b/VS.2015/Barony/Barony.vcxproj
@@ -1229,6 +1229,7 @@ if %errorlevel% leq 1 exit 0 else exit %errorlevel%</Command>
     <ClInclude Include="..\..\src\engine\audio\sound.hpp" />
     <ClInclude Include="..\..\src\engine\filepc.hpp" />
     <ClInclude Include="..\..\src\input.hpp" />
+    <ClInclude Include="..\..\src\interface\consolecommand.hpp" />
     <ClInclude Include="..\..\src\interface\ui.hpp" />
     <ClInclude Include="..\..\src\lobbies.hpp" />
     <ClInclude Include="..\..\src\mod_tools.hpp" />
