--- a/VS.2015/Barony/Barony.vcxproj.filters
+++ b/VS.2015/Barony/Barony.vcxproj.filters
@@ -453,9 +453,6 @@
     <ClCompile Include="..\..\src\engine\audio\defines.cpp">
       <Filter>Source Files\engine\audio</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\engine\audio\init.cpp">
-      <Filter>Source Files\engine\audio</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\ui\LoadingScreen.cpp">
       <Filter>Source Files\ui</Filter>
     </ClCompile>
@@ -488,6 +485,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\shader.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\engine\audio\init_audio.cpp">
+      <Filter>Source Files\engine\audio</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
